--- a/CitySearchApp.MVC/Views/CityCZ/Cities.cshtml
+++ b/CitySearchApp.MVC/Views/CityCZ/Cities.cshtml
@@ -1,4 +1,5 @@
 ﻿@using CitySearchApp.MVC.Models
+@using Microsoft.AspNetCore.Html;
 @model CitySearchApp.MVC.Models.CityDisplayModelVM
 
 @{
@@ -86,5 +87,10 @@
     </tbody>
 </table>
 <nav aria-label="Page navigation example">
-     @Html.Raw(Model.Paging?.paginstring.ToString())
+    @if (Model.Paging is not null)
+    {
+        @(
+            new HtmlString(Model.Paging.paginstring.ToString())
+        )
+    }
 </nav>
